# kweaver-eval

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  conftest.py  petri.yaml  pipeline.yaml  pyproject.toml
docs/: bug-report-cli-platform-state.md
docs/superpowers/plans/: 2026-03-30-modular-test-restructure.md  2026-04-08-agent-chat-robust.md  2026-04-14-test-supplement-pipeline.md
docs/superpowers/specs/: 2026-03-30-modular-test-restructure-design.md  2026-04-08-agent-chat-robust-design.md  2026-04-14-test-supplement-pipeline-design.md
lib/: eval_db.py  feedback.py  recorder.py  reporter.py  scorer.py  types.py
lib/agents/: __init__.py  base.py  cli_agent.py  judge_agent.py
roles/acceptability_judge/: instructions.md  soul.md
roles/auditor/: gate.yaml  role.yaml  soul.md
roles/auditor/skills/: coverage_audit.md
roles/env_checker/: gate.yaml  role.yaml  soul.md
roles/env_checker/skills/: check_env.md
roles/health_analyst/: instructions.md  soul.md
roles/regression_judge/: instructions.md  soul.md
roles/reporter/: gate.yaml  role.yaml  soul.md
roles/reporter/skills/: report.md
roles/test_writer/: gate.yaml  role.yaml  soul.md
roles/test_writer/skills/: write_tests.md
roles/triage_runner/: gate.yaml  role.yaml  soul.md
roles/triage_runner/skills/: triage.md
tests/: test_token_refresh.py
tests/adp/: conftest.py  test_agent.py  test_agent_lifecycle.py
tests/adp/agent/: conftest.py  (+13 more)
tests/agent/: test_full_flow_eval.py
tests/scripted/: test_agent.py  test_auth.py  test_bkn_lifecycle.py  test_datasource.py  test_query.py
(+48 files in other folders)
